syntax = "proto3";
package votes;

service VotesService{
    rpc RequestVote (VoteRequest) returns (VoteResponse) {};
}

message VoteRequest {
    uint32 term = 1;
    uint32 candidate_id = 2;
    uint32 last_log_index = 3;
    uint32 last_log_term = 4;
}

message VoteResponse {
    uint32 term = 1;
    bool vote_granted = 2;
}